--- a/client/index.html
+++ b/client/index.html
@@ -3,3 +3,6 @@
 <main></main>
 <script src="/bundle.js"></script>
 <link rel="stylesheet" href="/bundle.css" />
+<link href="https://fonts.googleapis.com/css2?family=Libre+Barcode+39+Text&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=DotGothic16&family=Libre+Barcode+39+Text&family=Roboto+Slab&display=swap" rel="stylesheet">
+<!-- <img src="" alt=""> -->
