--- a/client/index.html
+++ b/client/index.html
@@ -6,3 +6,4 @@
 <link href="https://fonts.googleapis.com/css2?family=Libre+Barcode+39+Text&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=DotGothic16&family=Libre+Barcode+39+Text&family=Roboto+Slab&display=swap" rel="stylesheet">
 <!-- <img src="" alt=""> -->
+<!-- <a href=""></a> -->
