--- a/client/index.html
+++ b/client/index.html
@@ -1,8 +1,14 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <title></title>
 <main></main>
 <script src="/bundle.js"></script>
+<link rel="stylesheet" href="/bundle.css" /> -->
+
+<!DOCTYPE html>
+<title></title>
 <link rel="stylesheet" href="/bundle.css" />
+<main></main>
+<script src="/bundle.js"></script>
 <link href="https://fonts.googleapis.com/css2?family=Libre+Barcode+39+Text&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=DotGothic16&family=Libre+Barcode+39+Text&family=Roboto+Slab&display=swap" rel="stylesheet">
 <!-- <img src="" alt=""> -->
