--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,8 @@
 <link rel="stylesheet" href="/bundle.css" />
 <main></main>
 <script src="/bundle.js"></script>
-<link href="https://fonts.googleapis.com/css2?family=Libre+Barcode+39+Text&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=DotGothic16&family=Libre+Barcode+39+Text&family=Roboto+Slab&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,500&display=swap" rel="stylesheet">
+<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌱</text></svg>">
+
 <!-- <img src="" alt=""> -->
 <!-- <a href=""></a> -->
